fixing desktop menu overflow prb and adding close btn

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,8 @@
 @import "../variables.scss";
 
+
+
+
 *::-webkit-scrollbar {
   width: 10px !important;
   background-color: $lite-primary-color !important;
@@ -21,12 +24,13 @@
   background: $primary-color !important;
 }
 
-.noscroll{
+.noscroll {
   &::-webkit-scrollbar {
     width: 0px !important;
     background-color: $lite-primary-color !important;
   }
 }
+
 %login-style {
   border: 1px solid $primary-color;
   text-transform: uppercase;
@@ -34,7 +38,7 @@
   text-decoration: none;
 }
 
-%not-selectibale{
+%not-selectibale {
   // set text not selectibale
   -moz-user-select: none;
   /* Firefox */
@@ -62,6 +66,7 @@ mat-sidenav-container {
 
       .menu {
         @extend %not-selectibale;
+
         #desktop_menu {
           display: none;
         }
@@ -71,7 +76,21 @@ mat-sidenav-container {
         }
 
         mat-icon {
+
           cursor: pointer;
+
+        }
+
+        .rotate {
+          -webkit-animation: spin .2s linear;
+          -moz-animation: spin .2s linear;
+          animation: spin .2s linear;
+        }
+
+        #closed_menu {
+          display: none;
+        
+
         }
 
         a {
@@ -83,6 +102,7 @@ mat-sidenav-container {
           color: black;
           cursor: pointer;
           @extend %not-selectibale;
+
           &:hover {
             color: black;
           }
@@ -98,6 +118,7 @@ mat-sidenav-container {
 
       .login {
         @extend %not-selectibale;
+
         .sinscrie {
           @extend %login-style;
           padding: 3px 20px;
@@ -132,12 +153,12 @@ mat-sidenav-container {
 
       #desktop_menu_container {
         background-color: white;
-        overflow:auto;
+        overflow: auto;
         height: calc(100vh);
         width: 100%;
         display: none;
         opacity: 0;
-        transition: opacity 0.3s;
+        transition: opacity 0.5s;
         position: fixed;
         z-index: 2;
         top: 75px;
@@ -153,6 +174,7 @@ mat-sidenav-container {
           margin-right: 5px;
           margin-top: 40px;
           margin-bottom: 40px;
+
           .link_row {
             width: 25%;
             padding-bottom: 40px;
@@ -196,65 +218,6 @@ mat-sidenav-container {
           }
         }
       }
-    }
-
-    .hero {
-      position: relative;
-
-      img {
-        width: 100%;
-        height: auto;
-        -webkit-filter: brightness(60%);
-        /* Safari 6.0 - 9.0 */
-        filter: brightness(60%);
-      }
-
-      .slogan {
-        position: absolute;
-        top: 26%;
-        left: 7%;
-
-        h3 {
-          position: relative;
-          color: white;
-          font-size: 16px;
-          font-family: $font-family;
-
-          &::before {
-            content: "";
-            position: absolute;
-            background-color: white;
-            height: 2px;
-            width: 21%;
-            top: -30%;
-          }
-        }
-      }
-
-      .lang {
-        position: absolute;
-        top: 2%;
-        right: 4%;
-
-        a {
-          padding-left: 4px;
-          font-family: $font-family;
-          color: white;
-          text-decoration: none;
-          font-size: 14px;
-        }
-
-        .ar {}
-
-        mat-icon {
-          color: white;
-          background-color: transparent;
-          font-size: 24px;
-        }
-      }
-
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 84%);
-
     }
   }
 }
