--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -39,19 +39,14 @@
 
       a {
         padding-left: 4px;
-        font-family: $secondary-font;
+        font-family: $font-family;
         color: white;
         text-decoration: none;
         font-size: 14px;
+        font-weight: 600;
       }
 
       .ar {}
-
-      // mat-icon {
-      //   color: white;
-      //   background-color: transparent;
-      //   font-size: 24px;
-      // }
       img{
         width: 20px;
         filter: brightness(100%);
